--- a/frontend/src/pages/Verify/Verify.css
+++ b/frontend/src/pages/Verify/Verify.css
@@ -1,19 +1,19 @@
 .verify {
     min-height: 60vh;
-    display: grid;
-    place-items: center;
+    display: grid;  
 }
 
 .spinner {
-    width: 90px;
-    height: 90px;
-    border: 5px solid #f3f3f3;
+    width: 100px;
+    height: 100px;
+    place-self: center;
+    border: 5px solid #bdbdbd;
     border-top: 5px solid tomato;
     border-radius: 50%;
-    animation: spin 1s linear infinite;
+    animation: rotate is infinite;
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    100% {transform: rotate(360deg); }
 }
