--- a/admin/src/pages/Orders/Orders.css
+++ b/admin/src/pages/Orders/Orders.css
@@ -48,5 +48,22 @@
   background-color: #ffe8e4;
   border: 1px solid tomato;
   outline: none;
-  padding: 10px;
+  padding: 5px;
+  font-size: 12px;
 }
+
+@media (max-width:1000px) {
+      .order-item{
+        font-size:12px ;
+        grid-template-columns: 0.5 2fr 1fr;
+        padding: 15px 8px;
+      }
+       .order-item select{
+        padding: 5px;
+        font-size: 12px;
+       }
+        .order-item img{
+          width: 40px;
+        }
+
+} 
